--- a/blog.html
+++ b/blog.html
@@ -105,8 +105,8 @@
     <script type="text/javascript" src="js/jquery-migrate.min.js"></script>
     <script type="text/javascript" src="js/modernizr-2.6.2.min.js"></script>
 
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="upload/logo.png" type="image/x-icon" />
+    <link rel="icon" href="upload/logo.png" type="image/x-icon" />
   </head>
 
   <body
