--- a/blog.html
+++ b/blog.html
@@ -214,7 +214,7 @@
                 <div class="header-code-widgets">
                   <div class="icon-shortcode align-none">
                     <a
-                      href="#"
+                      href="https://www.facebook.com/vitvuongvan"
                       class="icon-shortcode icon-circle"
                       data-animation="fadeIn"
                       ><i class="font-icon icon-social_facebook tiny circle"></i
@@ -222,26 +222,10 @@
                   </div>
                   <div class="icon-shortcode align-none">
                     <a
-                      href="#"
+                      href="https://www.instagram.com/vitvuongvan/?fbclid=IwAR0qwxjqEsFh1FMjcaLgVSxYqEHjv8o2krOtOqXXovXpZlMl6mRqE7iSnjo"
                       class="icon-shortcode icon-circle"
                       data-animation="fadeIn"
                       ><i class="font-icon icon-instagram tiny circle"></i
-                    ></a>
-                  </div>
-                  <div class="icon-shortcode align-none">
-                    <a
-                      href="#"
-                      class="icon-shortcode icon-circle"
-                      data-animation="fadeIn"
-                      ><i class="font-icon icon-pinterest tiny circle"></i
-                    ></a>
-                  </div>
-                  <div class="icon-shortcode align-none">
-                    <a
-                      href="#"
-                      class="icon-shortcode icon-circle"
-                      data-animation="fadeIn"
-                      ><i class="font-icon icon-social_twitter tiny circle"></i
                     ></a>
                   </div>
                 </div>
@@ -613,7 +597,7 @@
               <div class="footer-content-inner-center">
                 <div class="icon-shortcode align-none">
                   <a
-                    href="#"
+                    href="https://www.facebook.com/vitvuongvan"
                     class="icon-shortcode icon-circle"
                     data-animation="fadeIn"
                     ><i class="font-icon icon-social_facebook tiny circle"></i
@@ -621,26 +605,10 @@
                 </div>
                 <div class="icon-shortcode align-none">
                   <a
-                    href="#"
+                    href="https://www.instagram.com/vitvuongvan/?fbclid=IwAR0qwxjqEsFh1FMjcaLgVSxYqEHjv8o2krOtOqXXovXpZlMl6mRqE7iSnjo"
                     class="icon-shortcode icon-circle"
                     data-animation="fadeIn"
                     ><i class="font-icon icon-instagram tiny circle"></i
-                  ></a>
-                </div>
-                <div class="icon-shortcode align-none">
-                  <a
-                    href="#"
-                    class="icon-shortcode icon-circle"
-                    data-animation="fadeIn"
-                    ><i class="font-icon icon-pinterest tiny circle"></i
-                  ></a>
-                </div>
-                <div class="icon-shortcode align-none">
-                  <a
-                    href="#"
-                    class="icon-shortcode icon-circle"
-                    data-animation="fadeIn"
-                    ><i class="font-icon icon-social_twitter tiny circle"></i
                   ></a>
                 </div>
               </div>
