--- a/reservations.html
+++ b/reservations.html
@@ -215,7 +215,7 @@
                 <div class="header-code-widgets">
                   <div class="icon-shortcode align-none">
                     <a
-                      href="#"
+                      href="https://www.facebook.com/vitvuongvan"
                       class="icon-shortcode icon-circle"
                       data-animation="fadeIn"
                       ><i class="font-icon icon-social_facebook tiny circle"></i
@@ -223,26 +223,10 @@
                   </div>
                   <div class="icon-shortcode align-none">
                     <a
-                      href="#"
+                      href="https://www.instagram.com/vitvuongvan/?fbclid=IwAR0qwxjqEsFh1FMjcaLgVSxYqEHjv8o2krOtOqXXovXpZlMl6mRqE7iSnjo"
                       class="icon-shortcode icon-circle"
                       data-animation="fadeIn"
                       ><i class="font-icon icon-instagram tiny circle"></i
-                    ></a>
-                  </div>
-                  <div class="icon-shortcode align-none">
-                    <a
-                      href="#"
-                      class="icon-shortcode icon-circle"
-                      data-animation="fadeIn"
-                      ><i class="font-icon icon-pinterest tiny circle"></i
-                    ></a>
-                  </div>
-                  <div class="icon-shortcode align-none">
-                    <a
-                      href="#"
-                      class="icon-shortcode icon-circle"
-                      data-animation="fadeIn"
-                      ><i class="font-icon icon-social_twitter tiny circle"></i
                     ></a>
                   </div>
                 </div>
@@ -417,7 +401,7 @@
             <div class="footer-left-area">
               <div class="footer-content-inner-left">
                 <img
-                  src="https://scontent.fhan15-1.fna.fbcdn.net/v/t1.15752-9/370101367_338177318805080_6639064208401818982_n.png?_nc_cat=101&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=kz7sGjJAHiQAX9nGxIO&_nc_ht=scontent.fhan15-1.fna&oh=03_AdSVeFn_bYHI6CSA6qf0AMkhy1V8I4wH4HXSmxEXkqToqg&oe=6573410A"
+                  src="upload/logo.png"
                   alt="Vịt Vương Vấn Restaurant Demo"
                 />
                 <div class="linebreak" style="height: 25px"></div>
@@ -440,7 +424,7 @@
               <div class="footer-content-inner-center">
                 <div class="icon-shortcode align-none">
                   <a
-                    href="#"
+                    href="https://www.facebook.com/vitvuongvan"
                     class="icon-shortcode icon-circle"
                     data-animation="fadeIn"
                     ><i class="font-icon icon-social_facebook tiny circle"></i
@@ -448,26 +432,10 @@
                 </div>
                 <div class="icon-shortcode align-none">
                   <a
-                    href="#"
+                    href="https://www.instagram.com/vitvuongvan/?fbclid=IwAR0qwxjqEsFh1FMjcaLgVSxYqEHjv8o2krOtOqXXovXpZlMl6mRqE7iSnjo"
                     class="icon-shortcode icon-circle"
                     data-animation="fadeIn"
                     ><i class="font-icon icon-instagram tiny circle"></i
-                  ></a>
-                </div>
-                <div class="icon-shortcode align-none">
-                  <a
-                    href="#"
-                    class="icon-shortcode icon-circle"
-                    data-animation="fadeIn"
-                    ><i class="font-icon icon-pinterest tiny circle"></i
-                  ></a>
-                </div>
-                <div class="icon-shortcode align-none">
-                  <a
-                    href="#"
-                    class="icon-shortcode icon-circle"
-                    data-animation="fadeIn"
-                    ><i class="font-icon icon-social_twitter tiny circle"></i
                   ></a>
                 </div>
               </div>
