--- a/blog.html
+++ b/blog.html
@@ -223,7 +223,7 @@
                 <div class="header-code-widgets">
                   <div class="icon-shortcode align-none">
                     <a
-                      href="https://www.facebook.com/vitvuongvan"
+                      href="https://www.facebook.com/vitvuongvan.anlavuongvan"
                       class="icon-shortcode icon-circle"
                       data-animation="fadeIn"
                       ><i class="font-icon icon-social_facebook tiny circle"></i
@@ -231,7 +231,7 @@
                   </div>
                   <div class="icon-shortcode align-none">
                     <a
-                      href="https://www.instagram.com/vitvuongvan/?fbclid=IwAR0qwxjqEsFh1FMjcaLgVSxYqEHjv8o2krOtOqXXovXpZlMl6mRqE7iSnjo"
+                      href="https://www.instagram.com/vitvuongvan.vietnam?fbclid=IwAR2SSj8gEjm2amSpH6ujDmb0ERoVdCZ2Mx-fq_DyhwXTJD2dUm6c4zuXvX0"
                       class="icon-shortcode icon-circle"
                       data-animation="fadeIn"
                       ><i class="font-icon icon-instagram tiny circle"></i
@@ -606,7 +606,7 @@
               <div class="footer-content-inner-center">
                 <div class="icon-shortcode align-none">
                   <a
-                    href="https://www.facebook.com/vitvuongvan"
+                    href="https://www.facebook.com/vitvuongvan.anlavuongvan"
                     class="icon-shortcode icon-circle"
                     data-animation="fadeIn"
                     ><i class="font-icon icon-social_facebook tiny circle"></i
@@ -614,7 +614,7 @@
                 </div>
                 <div class="icon-shortcode align-none">
                   <a
-                    href="https://www.instagram.com/vitvuongvan/?fbclid=IwAR0qwxjqEsFh1FMjcaLgVSxYqEHjv8o2krOtOqXXovXpZlMl6mRqE7iSnjo"
+                    href="https://www.instagram.com/vitvuongvan.vietnam?fbclid=IwAR2SSj8gEjm2amSpH6ujDmb0ERoVdCZ2Mx-fq_DyhwXTJD2dUm6c4zuXvX0"
                     class="icon-shortcode icon-circle"
                     data-animation="fadeIn"
                     ><i class="font-icon icon-instagram tiny circle"></i
