--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                     <li class="menu-item"><a href="about.html">About</a></li>
                     <li class="menu-item"><a href="menu.html">Menu</a></li>
                     <li class="menu-item">
-                      <a href="reservations.html">Contact Us</a>
+                      <a href="reservations.html">Order and Contact</a>
                     </li>
                   </ul>
                 </div>
@@ -642,7 +642,7 @@
                   <li class="menu-item"><a href="about.html">About</a></li>
                   <li class="menu-item"><a href="menu.html">Menu</a></li>
                   <li class="menu-item">
-                    <a href="reservations.html">Contact Us</a>
+                    <a href="reservations.html">Order and Contact</a>
                   </li>
                 </ul>
               </div>
