--- a/reservations.html
+++ b/reservations.html
@@ -15,7 +15,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <![endif]-->
 
-    <title>Vịt Vương Vấn - Duck Pan & Restaurant HTML Template</title>
+    <title>Vịt Vương Vấn  </title>
     <meta
       name="viewport"
       content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"
@@ -249,7 +249,7 @@
                     <li class="menu-item"><a href="about.html">About</a></li>
                     <li class="menu-item"><a href="menu.html">Menu</a></li>
                     <li class="menu-item">
-                      <a href="reservations.html">Contact Us</a>
+                      <a href="reservations.html">Order and Contact</a>
                     </li>
                   </ul>
                 </div>
@@ -268,7 +268,7 @@
                   <li class="menu-item"><a href="about.html">About</a></li>
                   <li class="menu-item"><a href="menu.html">Menu</a></li>
                   <li class="menu-item">
-                    <a href="reservations.html">Contact Us</a>
+                    <a href="reservations.html">Order and Contact</a>
                   </li>
                 </ul>
               </div>
