--- a/reservations.html
+++ b/reservations.html
@@ -349,7 +349,20 @@
                                     <option value="3">Size S</option>
                                     <option value="4">Combo hạnh phúc</option>
                                     <option value="5">Conmbo yêu thương</option>
+                                    <option value="6">Conmbo tuyệt đỉnh</option>
                                   </select>
+                                </div>
+                                <div class="note">
+                                  <label for="rtb-address"> Note </label>
+                                  <input
+                                    type="text"
+                                    name="note"
+                                    id="note"
+                                    style="
+                                      width: 100%;
+                                      margin-bottom: 10px !important;
+                                    "
+                                  />
                                 </div>
                                 <div class="quantity">
                                   <label for="rtb-quantity"> Quantity </label>
